| Summary: | ASTERISK-27872: res_pjsip: Modified qualify_frequency doesn't effect until pjsip reload | ||
| Reporter: | Alexei Gradinari (alexei gradinari) | Labels: | pjsip |
| Date Opened: | 2018-05-22 16:20:55 | Date Closed: | 2018-06-06 10:11:32 |
| Priority: | Major | Regression? | |
| Status: | Closed/Complete | Components: | Resources/res_pjsip |
| Versions: | 13.21.0 GIT | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | Currentrly pjsip_options code does not handle the situation when the qualify_frequency was changed in realtime database.
Only 'module reload res_pjsip' helps. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2018-05-22 16:20:57.103-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Friendly Automation (friendly-automation) 2018-06-06 10:11:32.954-0500 Change 9101 merged by George Joseph: pjsip_options: show/reload AOR qualify options using CLI [https://gerrit.asterisk.org/9101|https://gerrit.asterisk.org/9101] By: Friendly Automation (friendly-automation) 2018-06-06 10:11:45.498-0500 Change 9047 merged by George Joseph: pjsip_options: show/reload AOR qualify options using CLI [https://gerrit.asterisk.org/9047|https://gerrit.asterisk.org/9047] By: Friendly Automation (friendly-automation) 2018-06-06 10:12:10.959-0500 Change 9104 merged by George Joseph: pjsip_options: show/reload AOR qualify options using CLI [https://gerrit.asterisk.org/9104|https://gerrit.asterisk.org/9104] By: Friendly Automation (friendly-automation) 2018-06-06 10:14:13.067-0500 Change 9103 merged by George Joseph: pjsip_options: handle modification of qualify options in realtime [https://gerrit.asterisk.org/9103|https://gerrit.asterisk.org/9103] By: Friendly Automation (friendly-automation) 2018-06-06 10:14:23.929-0500 Change 9102 merged by George Joseph: pjsip_options: handle modification of qualify options in realtime [https://gerrit.asterisk.org/9102|https://gerrit.asterisk.org/9102] By: Friendly Automation (friendly-automation) 2018-06-06 11:22:43.788-0500 Change 9033 merged by Joshua Colp: pjsip_options: handle modification of qualify options in realtime [https://gerrit.asterisk.org/9033|https://gerrit.asterisk.org/9033] By: Remi Quezada (remiq) 2018-07-05 14:09:28.889-0500 I still have to reload pjsip for qualify to take effect on realtime. | ||